[gd_scene load_steps=44 format=2]

[ext_resource path="res://img/warrior-free-animation-set/Warrior/SpriteSheet/Warrior_SheetnoEffect.png" type="Texture" id=1]
[ext_resource path="res://Hitbox.gd" type="Script" id=2]
[ext_resource path="res://Player/Player.gd" type="Script" id=3]
[ext_resource path="res://ShakyCamera.gd" type="Script" id=4]
[ext_resource path="res://Player/Weapon.gd" type="Script" id=5]
[ext_resource path="res://Player/Inventory.gd" type="Script" id=6]
[ext_resource path="res://Player/Regeneration.gd" type="Script" id=7]
[ext_resource path="res://audio/audioassets/The Essential Retro Video Game Sound Effects Collection [512 sounds] By Juhani Junkala/Movement/food-B.ogg" type="AudioStream" id=10]
[ext_resource path="res://classes/items/Amor/Alte Weste.tres" type="Resource" id=12]
[ext_resource path="res://Player/BodyAmor.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=87]
extents = Vector2( 10, 16.5 )

[sub_resource type="CapsuleShape2D" id=120]
height = 18.0

[sub_resource type="CapsuleShape2D" id=88]
radius = 9.0
height = 34.0

[sub_resource type="CapsuleShape2D" id=89]
height = 30.0

[sub_resource type="Animation" id=90]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer:playback_speed")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=111]
resource_name = "climbLadder"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 91, 92, 93, 94, 95, 96, 97, 98 ]
}

[sub_resource type="Animation" id=108]
resource_name = "crouch"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 64, 65, 66, 67 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=109]
resource_name = "crouchDown"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 63, 64, 65 ]
}

[sub_resource type="Animation" id=110]
resource_name = "crouchUp"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 67, 64, 68 ]
}

[sub_resource type="Animation" id=104]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36 ]
}

[sub_resource type="Animation" id=101]
resource_name = "fall_down"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 46, 47, 48 ]
}

[sub_resource type="Animation" id=99]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 37, 38, 39, 40 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hurt_animation_finished"
} ]
}

[sub_resource type="Animation" id=119]
resource_name = "idleLadder"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 91, 91 ]
}

[sub_resource type="Animation" id=92]
resource_name = "idle_right"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=102]
resource_name = "jump_up"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 41, 42, 43 ]
}

[sub_resource type="Animation" id=94]
resource_name = "jump_up_right"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 41, 42, 43 ]
}

[sub_resource type="Animation" id=95]
resource_name = "normal_atk_left"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Weapon/Sword/Collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "swordFX"
}, {
"args": [  ],
"method": "atk_animation_finished"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Weapon:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -32, -26 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationPlayer:playback_speed")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1.5, 1.0 ]
}

[sub_resource type="Animation" id=96]
resource_name = "normal_atk_right"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Weapon/Sword/Collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "swordFX"
}, {
"args": [  ],
"method": "atk_animation_finished"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Weapon:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32, -26 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationPlayer:playback_speed")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1.5, 1.0 ]
}

[sub_resource type="Animation" id=98]
resource_name = "run_right"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11, 12, 13 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("FoodSFX")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 10 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="Animation" id=100]
resource_name = "slide"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 68, 69, 70, 71, 72, 73, 74, 75 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "slide_animation_finished"
} ]
}

[sub_resource type="Animation" id=113]
resource_name = "slide_atk_left"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 77, 79, 80, 81, 82 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Weapon/Sword/Collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "swordFX"
}, {
"args": [  ],
"method": "atk_animation_finished"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Weapon:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -32, -26 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationPlayer:playback_speed")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0 ]
}

[sub_resource type="Animation" id=114]
resource_name = "slide_atk_right"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 77, 14, 15, 16, 79, 80, 81, 82, 83 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Weapon/Sword/Collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "swordFX"
}, {
"args": [  ],
"method": "atk_animation_finished"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Weapon:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32, -26 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationPlayer:playback_speed")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0 ]
}

[sub_resource type="Animation" id=117]
resource_name = "sword_atk_left"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 77, 79, 80, 81, 82 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Weapon/Sword/Collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "swordFX"
}, {
"args": [  ],
"method": "atk_animation_finished"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Weapon:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -32, -26 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationPlayer:playback_speed")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "sword_spell"
} ]
}

[sub_resource type="Animation" id=118]
resource_name = "sword_atk_right"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 77, 14, 15, 16, 79, 80, 81, 82, 83 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Weapon/Sword/Collider:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "swordFX"
}, {
"args": [  ],
"method": "atk_animation_finished"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Weapon:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32, -26 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationPlayer:playback_speed")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0 ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "sword_spell"
} ]
}

[sub_resource type="Animation" id=103]
resource_name = "up2down"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 45, 46 ]
}

[sub_resource type="Animation" id=105]
resource_name = "wallgrap"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 49, 50, 51, 52, 53, 54 ]
}

[sub_resource type="Animation" id=106]
resource_name = "wallidle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 54, 55, 56, 57, 58, 59 ]
}

[sub_resource type="Animation" id=107]
resource_name = "wallslide"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 60, 61, 62 ]
}

[sub_resource type="Animation" id=121]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Darkscreen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=122]
resource_name = "dark2light"
tracks/0/type = "value"
tracks/0/path = NodePath("Darkscreen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.2, 0.2, 0.215686, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=123]
resource_name = "light2dark"
tracks/0/type = "value"
tracks/0/path = NodePath("Darkscreen:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.2, 0.2, 0.215686, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=112]
extents = Vector2( 30, 27.5 )

[sub_resource type="AudioStreamSample" id=116]
stereo = true

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_mask = 513
script = ExtResource( 3 )
jump_force = 480

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -16.5 )
shape = SubResource( 87 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, -33 )
shape = SubResource( 120 )

[node name="Weapon" type="Node2D" parent="."]
position = Vector2( 32, -26 )
scale = Vector2( 1.25, 1 )

[node name="Sword" type="Area2D" parent="Weapon" groups=["player_weapon"]]
collision_layer = 4
collision_mask = 0
gravity = 0.0
script = ExtResource( 5 )

[node name="Collider" type="CollisionShape2D" parent="Weapon/Sword"]
shape = SubResource( 88 )
disabled = true

[node name="Hitbox" type="Area2D" parent="." groups=["player_hitbox"]]
position = Vector2( 0, -30 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 5 )
shape = SubResource( 89 )

[node name="BodyAmor" type="Node" parent="Hitbox"]
script = ExtResource( 13 )
practice_amor = ExtResource( 12 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 90 )
anims/climbLadder = SubResource( 111 )
anims/crouch = SubResource( 108 )
anims/crouchDown = SubResource( 109 )
anims/crouchUp = SubResource( 110 )
anims/die = SubResource( 104 )
anims/fall_down = SubResource( 101 )
anims/hurt = SubResource( 99 )
anims/idleLadder = SubResource( 119 )
anims/idle_right = SubResource( 92 )
anims/jump_up = SubResource( 102 )
anims/jump_up_right = SubResource( 94 )
anims/normal_atk_left = SubResource( 95 )
anims/normal_atk_right = SubResource( 96 )
anims/run_right = SubResource( 98 )
anims/slide = SubResource( 100 )
anims/slide_atk_left = SubResource( 113 )
anims/slide_atk_right = SubResource( 114 )
anims/sword_atk_left = SubResource( 117 )
anims/sword_atk_right = SubResource( 118 )
anims/up2down = SubResource( 103 )
anims/wallgrap = SubResource( 105 )
anims/wallidle = SubResource( 106 )
anims/wallslide = SubResource( 107 )

[node name="Camera2D" type="Camera2D" parent="." groups=["camera"]]
position = Vector2( 0, -65 )
current = true
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 8.0
drag_margin_bottom = 0.01
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 4 )

[node name="Darkscreen" type="CanvasModulate" parent="Camera2D"]

[node name="CamAnimantion" type="AnimationPlayer" parent="Camera2D"]
anims/RESET = SubResource( 121 )
anims/dark2light = SubResource( 122 )
anims/light2dark = SubResource( 123 )

[node name="InteractionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 256

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="InteractionZone"]
position = Vector2( -2, -27.5 )
shape = SubResource( 112 )

[node name="Body" type="Sprite" parent="."]
position = Vector2( 8.007, 0 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
offset = Vector2( 0, -21 )
hframes = 6
vframes = 17

[node name="Inventory" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Regeneration" type="Node" parent="."]
script = ExtResource( 7 )

[node name="RegTimer" type="Timer" parent="Regeneration"]
one_shot = true

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = SubResource( 116 )
volume_db = -15.0
pitch_scale = 1.25
bus = "Player"

[node name="FoodSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -20.0
bus = "Player"

[node name="StatusHandler" type="Node2D" parent="."]

[node name="StatusTimer" type="Timer" parent="StatusHandler"]
wait_time = 2.5
one_shot = true

[connection signal="area_entered" from="Weapon/Sword" to="Weapon/Sword" method="_on_Sword_area_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="Hitbox" to="Hitbox" method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_changed" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="InteractionZone" to="." method="_on_InteractionZone_area_entered"]
[connection signal="area_exited" from="InteractionZone" to="." method="_on_InteractionZone_area_exited"]
[connection signal="body_entered" from="InteractionZone" to="." method="_on_InteractionZone_body_entered"]
[connection signal="body_exited" from="InteractionZone" to="." method="_on_InteractionZone_body_exited"]
[connection signal="timeout" from="Regeneration/RegTimer" to="Regeneration" method="_on_RegTimer_timeout"]
[connection signal="finished" from="SFX" to="." method="_on_SFX_finished"]
[connection signal="timeout" from="StatusHandler/StatusTimer" to="." method="_on_StatusTimer_timeout"]
